@@ -180,64 +180,64 @@
 		<control type="grouplist">
             <posx>0</posx>
             <posy>-6</posy>
-            <width>24-col</width>
+            <width>20-col</width>
             <height>1-row</height>
-            <itemgap>0</itemgap>
+            <itemgap>6</itemgap>
             <onleft>50</onleft>
             <onright>50</onright>
             <onup>9999</onup>
             <ondown>9999</ondown>
             <orientation>horizontal</orientation>
             <control type="label">
-                <width min="30" max="200">auto</width>
+                <width>auto</width>
                 <font>symbol</font>
                 <textcolor>selected</textcolor>
                 <label></label>
             </control>
             <control type="label">
-                <width>3-col</width>
+                <width>auto</width>
                 <font>buttonTitle</font>
                 <textcolor>selected</textcolor>
                 <label>$LOCALIZE[31038] $INFO[container.currentpage] / $INFO[container.numpages]</label>
             </control>
 			<control type="label">
                 <visible>System.Setting(hidewatched)</visible>
-                <width>30</width>
+                <width>auto</width>
                 <font>symbol</font>
                 <textcolor>selected</textcolor>
-                <label></label>
+                <label>     </label>
             </control>
             <control type="label">
                 <visible>System.Setting(hidewatched)</visible>
-                <width>5-col</width>
+                <width>auto</width>
                 <font>buttonTitle</font>
                 <label>$LOCALIZE[31118]</label>
                 <textcolor>selected</textcolor>
             </control>
             <control type="label">
                 <visible>!isempty(ListItem.audiocodec)</visible>
-                <width min="30" max="200">auto</width>
+                <width>auto</width>
                 <font>symbol</font>
                 <textcolor>selected</textcolor>
-                <label></label>
+                <label>     </label>
             </control>
             <control type="label">
                 <visible>!isempty(ListItem.audiocodec)</visible>
-                <width>2-col</width>
+                <width>auto</width>
                 <font>buttonTitle</font>
                 <textcolor>selected</textcolor>
                 <label>$INFO[ListItem.audiocodec]</label>
             </control>
             <control type="label">
                 <visible>!isempty(ListItem.FileName)</visible>
-                <width min="30" max="200">auto</width>
+                <width>auto</width>
                 <font>symbol</font>
                 <textcolor>selected</textcolor>
-                <label></label>
+                <label>     </label>
             </control>
             <control type="label">
                 <visible>!isempty(ListItem.FileName)</visible>
-                <width>6-col</width>
+                <width>auto</width>
                 <font>buttonTitle</font>
                 <textcolor>selected</textcolor>
                 <label>$INFO[ListItem.FileName]</label>
