@@ -64,6 +64,17 @@
         <value condition="IntegerGreaterThan(ListItem.VideoResolution,719)">$LOCALIZE[31127]</value>
         <value condition="!IsEmpty(ListItem.VideoResolution)">$LOCALIZE[31128]</value>
     </variable>
+	<!--Music player shuffle state-->
+	<variable name="shuffleState">
+		<value condition="Playlist.IsRandom">$LOCALIZE[191]: $LOCALIZE[16041]</value>
+		<value>$LOCALIZE[191]: $LOCALIZE[16039]</value>
+	</variable>
+	<!--Music player repeat state-->
+	<variable name="repeatState">
+		<value condition="Playlist.IsRepeat">$LOCALIZE[597]</value>
+		<value condition="Playlist.IsRepeatOne">$LOCALIZE[596]</value>
+		<value condition="!Playlist.IsRepeat + !Playlist.IsRepeatOne">$LOCALIZE[595]</value>
+	</variable>
     <!--fullscreeninfo titles-->
     <variable name="nowPlayingTitle">
         <value condition="!StringCompare(VideoPlayer.title,VideoPlayer.TVShowTitle)">$INFO[videoplayer.tvshowtitle] $INFO[videoplayer.title]</value>
