@@ -26,7 +26,7 @@
                 <font>smallMedium</font>
                 <width>468</width>
                 <height>1-row</height>
-                <label>[UPPERCASE][B]$INFO[MusicPlayer.Artist][/B] • $INFO[MusicPlayer.Album][/UPPERCASE]</label>
+                <label>[UPPERCASE][B]$INFO[MusicPlayer.Artist][/B]$INFO[MusicPlayer.Album, • ,][/UPPERCASE]</label>
                 <scroll>false</scroll>
                 <textcolor>black</textcolor>
                 <shadowcolor>-</shadowcolor>
